--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -2,7 +2,7 @@
         <div class="footer">
             <div class="footer-little">
                 <img src="{{asset('assets/uploads/logo.png')}}" alt="Logo Sandraya">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus unde porro impedit perferendis corporis saepe rem neque! Obcaecati reiciendis quas quia, ipsa aperiam optio, enim cum commodi itaque, praesentium porro.</p>
+                <p>L’univers unique de l’artisanat créatif où la tradition rencontre l’originalité. Chaque création est réalisée avec soin et passion, alliant la finesse du travail à point de croix à la modernité et la durabilité de la résine. </p>
             </div>
             <div class="footer-little">
                 <h3>Boutique</h3>
@@ -20,7 +20,7 @@
                     <li><a href="">Suivi de commande</a></li>
                 </div>
             <div class="footer-little">
-                <h3>Legale</h3>
+                <h3>Legal</h3>
                 <ul>
                     <li><a href="">Mention légales</a></li>
                     <li><a href="">CGV</a></li>
@@ -30,8 +30,8 @@
                 </ul>
             </div>
             <div class="footer-little">
-                <h3>Contact</h3>
-                <ul>
+                <h3 class="hide">Contact</h3>
+                <ul class="hide">
                     <li><a href="">Email</a></li>
                     <li><a href="">Portable</a></li>
                     <li><a href="">Instagram</a></li>
