--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -36,7 +36,7 @@
 		<div class="navBar">
 			<a href="{{path('app_home')}}">Accueil</a>
 			<a href="{{path('app_produits')}}">Produits</a>
-			<a href="">Signalibre</a>
+			<a href="">Marque-page</a>
 		</div>
 	</div>
 </header>
