--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -4,9 +4,31 @@
 				<i class="fa-solid fa-cart-shopping" id="panier"></i>
 				<i class="fa-solid fa-user" id="omino"></i>
 		<div class="showPanier">
-			<ul>
-				<li><a href="">Mon Panier</a></li>
-			</ul>
+			<ul id="panier-list">
+        {% for item in cartItems %}
+            <li data-id="{{ item.id }}" data-price="{{ item.prix }}">
+			<div class="imgPanier">
+                <img src="{{ item.image }}" alt="{{ item.nom }}" />
+			</div>
+			<div class="textPanier">
+                <span class="name">{{ item.nom }}</span>
+                <span class="qty">Quantité: {{ item.qty }}</span>
+                <span class="price">Prix: {{ (item.prix * item.qty)|number_format(2, ',', '.') }} €</span>
+                <button class="add-one-btn">+</button>
+				<button class="remove-btn">-</button>
+			</div>
+            </li>
+        {% endfor %}
+    </ul>
+
+    <div id="panier-total">
+        <span>Total articles: <span id="total-qty">{{ totalQty }}</span></span>
+        <span>Total prix: <span id="total-price">{{ totalPrice|number_format(2, ',', '.') }}</span> €</span>
+    </div>
+	<div id="cart-actions">
+        <button id="checkout-btn">Acheter</button>
+        <button id="clear-cart-btn">Vider le panier</button>
+    </div>
 		</div>
 		<div class="show">
 			<ul>
