--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,6 +17,23 @@ body {
     overflow-x: hidden;
 }
 
+button{
+    
+    background-color: #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: #1a2e25;
+    box-shadow: 1px 1px 10px #e79ebd;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+    border: none;
+}
+
+button:hover {
+    background-color: #e79ebd;
+    color: #1a2e25;
+}
+
 /* NavBar */
 
 .titre {
@@ -75,6 +92,8 @@ body {
     margin-left: 10px;
 }
 
+/* Panier et Connexion */
+
 .icone {
     background-color: #ccb089;
     text-align: end;
@@ -125,11 +144,13 @@ body {
 }
 
 
-
+.remove-btn, .add-one-btn{
+    font-size: 1.5em;
+}
 .showPanier #panier-list{
     flex: 1;
-    list-style: none;               /* prend l'espace dispo */
-    overflow-y: auto;        /* SCROLL */
+    list-style: none;               
+    overflow-y: auto;      
     padding: 10px;
     margin: 0;
 }
@@ -408,6 +429,7 @@ form button:hover {
 .littleBanner p{
     width: 50%;
     margin: auto;
+    font-size: 1.5em;
 }
 
 
