--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -16,7 +16,7 @@
 									<span class="qty" data-qty='{{item.qty}}'>Quantité:
 										{{ item.qty }}</span>
 									<span class="price">Prix:
-										{{ (item.prix * item.qty)|number_format(2, ',', '.') }}
+										{{ (item.prix * item.qty) }}
 										€</span>
 									<div class="plusMoins">
 										<button class="remove-btn">-</button>
@@ -71,7 +71,7 @@
 		</div>
 		<div class="titre">
 			<img src="{{asset('assets/uploads/ramoBig.png')}}" alt="branche d’arbre avec des fleurs roses">
-			<img src="{{asset('assets/uploads/logo.png')}}" alt="logo ssite Sandraya">
+			<img src="{{asset('assets/uploads/logofina.svg')}}" alt="logo site Sandraya">
 			<img src="{{asset('assets/uploads/ramoBig.png')}}" alt="branche d’arbre avec des fleurs roses">
 		</div>
 		<div class="navBar">
