--- a/templates/detail_produit/index.html.twig
+++ b/templates/detail_produit/index.html.twig
@@ -4,6 +4,10 @@
 {% endblock %}
 
 {% block body %}
+
+<div id="cart-message">
+    Produit ajouté au panier !
+</div>
 	<div class="contain">
 		<div class="sin">
 
