--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block body %}
+<div id="cart-message">
+    Produit ajouté au panier !
+</div>
 	<h1>Produits</h1>
 
 	<div class="produitBanner">
