--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,7 +1,7 @@
 <footer>
         <div class="footer">
             <div class="footer-little">
-                <img src="{{asset('assets/uploads/logo.png')}}" alt="Logo Sandraya">
+                <img src="{{asset('assets/uploads/logofina.svg')}}" alt="Logo Sandraya">
                 <p>L’univers unique de l’artisanat créatif où la tradition rencontre l’originalité. Chaque création est réalisée avec soin et passion, alliant la finesse du travail à point de croix à la modernité et la durabilité de la résine. </p>
             </div>
             <div class="footer-little">
