--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,16 +8,16 @@
             <i class="fa-solid fa-chevron-left freccia"></i>
             <div class="contImage">
             <div class="exa">
-                <img src="{{asset('assets/uploads/example.png')}}" alt="">
+                <img src="{{asset('assets/uploads/carosello.png')}}" alt="">
             </div>
             <div class="exa">
-            <img src="{{asset('assets/uploads/example.png')}}" alt="">
+            <img src="{{asset('assets/uploads/strada.png')}}" alt="">
             </div>
             <div class="exa">
-                <img src="{{asset('assets/uploads/example.png')}}" alt="">
+                <img src="{{asset('assets/uploads/venditaCasa.png')}}" alt="">
             </div>
             <div class="exa">
-                <img src="{{asset('assets/uploads/example.png')}}" alt="">
+                <img src="{{asset('assets/uploads/mercatino.png')}}" alt="">
             </div>
             </div>
             <i class="fa-solid fa-chevron-right freccia2"></i>
