--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -3,18 +3,35 @@
 {% block title %}Hello PanierController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Mon panier</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
+{% if items is empty %}
+    <p>Votre panier est vide.</p>
+{% else %}
     <ul>
-        <li>Your controller at <code>C:/Users/EDW2526/Desktop/sandraya/src/Controller/PanierController.php</code></li>
-        <li>Your template at <code>C:/Users/EDW2526/Desktop/sandraya/templates/panier/index.html.twig</code></li>
+        {% for item in items %}
+            <li>
+                <strong>{{ item.produit.nomProd }}</strong><br>
+
+                {% if item.image %}
+                    <img src="/assets/uploads/{{ item.image }}" width="100">
+                {% endif %}
+
+                <p>Prix: {{ item.produit.prix }} €</p>
+                <p>Quantité: {{ item.qty }}</p>
+                <p>Total: {{ item.total }} €</p>
+            </li>
+        {% endfor %}
     </ul>
-</div>
+
+    <h2>Total panier : {{ total }} €</h2>
+{% endif %}
+
+{% if items is not empty %}
+<form action="{{ path('app_panier_finaliser') }}" method="post">
+    <button type="submit">
+        Finaliser la commande
+    </button>
+</form>
+{% endif %}
 {% endblock %}
