--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <h1>Home Page</h1>
+    <h1>Accueil</h1>
     <div class="carousel">
             <i class="fa-solid fa-chevron-left freccia"></i>
             <div class="contImage">
@@ -23,3 +23,4 @@
             <i class="fa-solid fa-chevron-right freccia2"></i>
         </div>
 {% endblock %}
+
