--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -24,13 +24,13 @@
 	</div>
 
 
-	<h2>Pendentifs</h2>
+	<h2>Rune</h2>
 {% include 'produits/_collection.html.twig' with {
     produits: produits,
     category: 'pendentif'
 } %}
 
-<h2>Porte-clés</h2>
+<h2>Floral</h2>
 {% include 'produits/_collection.html.twig' with {
     produits: produits,
     category: 'pendentifFleur'
