--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -43,3 +43,6 @@
     </footer>
 <script src="https://kit.fontawesome.com/88c7dae6e1.js" crossorigin="anonymous"></script>
 <script src="{{asset("assets/js/structure.js")}}"></script>
+<script src="{{asset('assets/js/stitch-engine.js')}}"></script>
+	<script src="{{asset('assets/js/stitch-letter.js')}}"></script>
+	<script src="{{asset('assets/js/stitch-title.js')}}"></script>
