--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -7,7 +7,7 @@
 <div id="cart-message">
     Produit ajouté au panier !
 </div>
-	<h1>Produits</h1>
+	<h1><canvas class="stitch-title" data-text="2RODUITS"></canvas></h1>
 
 	<div class="produitBanner">
 		<div class="littleBanner">
