--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+<h1><canvas class="stitch-title" data-text="4NSCRIPTION"></canvas></h1>
 <div id="form-register">
-    <h1>Register</h1>
 
     {{ form_errors(registrationForm) }}
 
