--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -79,6 +79,7 @@
 			<a href="{{path('app_produits')}}">Produits</a>
 			{% if app.user %}
 			<a href="{{path('app_profil')}}">Profil</a>
+			<a href="{{path('app_favoris_list')}}">Mes Favoris</a>
 				
 			{% endif %}
 		</div>
