--- a/templates/favoris/index.html.twig
+++ b/templates/favoris/index.html.twig
@@ -3,18 +3,44 @@
 {% block title %}Hello FavorisController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/EDW2526/Desktop/sandraya/src/Controller/FavorisController.php</code></li>
-        <li>Your template at <code>C:/Users/EDW2526/Desktop/sandraya/templates/favoris/index.html.twig</code></li>
-    </ul>
+<div id="cart-message">
+    Produit ajouté au panier !
 </div>
+<h1>Mes Favoris</h1>
+
+{% if favoris is empty %}
+    <p>Vous n'avez aucun favori.</p>
+{% else %}
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Nom du produit</th>
+                <th>Prix</th>
+                <th>Supprime</th>
+                <th>Ajouter au panier</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for fav in favoris %}
+                <tr id="favori-{{ fav.id }}">
+                    <td>
+                        {% if fav.produit.produitsImages|length > 0 %}
+                            <img src="{{ asset('assets/uploads/' ~ fav.produit.produitsImages[0].image) }}"
+                                 alt="{{ fav.produit.nomProd }}" width="80">
+                        {% endif %}
+                    </td>
+                    <td>{{ fav.produit.nomProd }}</td>
+                    <td>{{ fav.produit.prix }} €</td>
+                    <td>
+                        <button class="supprimer-favoris" id="{{ fav.id }}">Supprimer</button>
+                    </td>
+                    <td>
+                    <button class="addToCart-favoris" id="{{ fav.produit.id }}">Ajouter au panier</button>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endif %}
 {% endblock %}
