--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Profil de
-		{{ user.username }}</h1>
+	<h1><canvas class="stitch-title" data-text="2ROFIL"></canvas></h1>
+
 
 
 	<div class="profile">
