--- a/templates/favoris/index.html.twig
+++ b/templates/favoris/index.html.twig
@@ -6,7 +6,7 @@
 <div id="cart-message">
     Produit ajouté au panier !
 </div>
-<h1>Mes Favoris</h1>
+<h1><canvas class="stitch-title" data-text="5AVORIS"></canvas></h1>
 
 {% if favoris is empty %}
     <p>Vous n'avez aucun favori.</p>
